Modificado timeout dos testes

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Biblioteca de comunicação com API de reserva online da HMAX",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --timeout 5000"
   },
   "repository": {
     "type": "git",
